--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
+//    id 'kotlin-android-extensions'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -30,6 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -52,4 +57,29 @@ dependencies {
     implementation("androidx.camera:camera-view:1.0.0-alpha28")
     // If you want to additionally use the CameraX Extensions library
     implementation("androidx.camera:camera-extensions:1.0.0-alpha28")
+
+    //Scalable Size Unit
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    //Rounded image view
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //GPU Image
+    implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
+
+    //Koin - The Kotlin Injection Framework
+    // Koin for Android - Scope feature
+    // include koin-android-scope & koin-android
+//    implementation "io.insert-koin:koin-android:3.1.2"
+    implementation 'org.koin:koin-android-viewmodel:2.0.0'
+
+
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha03")
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha03")
+
+
+
 }
