--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.azhar.pixeleditor">
+    package="com.azhar.pixeleditor" >
 
     <uses-feature android:name="android.hardware.camera.any" />
 
@@ -12,10 +12,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PixelEditor">
+        android:theme="@style/Theme.PixelEditor" >
+        <activity
+            android:name=".View.EditImageActivity"
+            android:exported="true" />
         <activity
             android:name=".View.CameraXActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,10 +26,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/FullScreen"
-            android:name=".MainActivity"
-            android:exported="true">
-
+            android:name=".View.MainActivity"
+            android:exported="true"
+            android:theme="@style/FullScreen" >
         </activity>
     </application>
 
