--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-//    id 'kotlin-android-extensions'
-    id 'kotlin-parcelize'
+    id 'kotlin-android-extensions'
+//    id 'kotlin-parcelize'
 }
 
 android {
